--- a/RayTracingApp/GUI/Properties/Resources.resx
+++ b/RayTracingApp/GUI/Properties/Resources.resx
@@ -160,11 +160,11 @@
   <data name="sceneIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sceneIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="userIcon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\userIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="materialIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\materialIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sX" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sX.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="userIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\userIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,6 +208,9 @@
   <data name="whiteX" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\whiteX.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="blackWarning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blackWarning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="userBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\userBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -226,13 +229,13 @@
   <data name="fieldRectangle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fieldRectangle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="sX" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\sX.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="userIcon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\userIcon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mBlankScene" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mBlankScene.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="blackWarning" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\blackWarning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="export" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\export.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
